[package]
name = "advent-of-code-2015-retro"
version = "0.1.0"
authors = ["Björn Westlin <bwestlin@gmail.com>"]

[dependencies]
regex = "1"
lazy_static = "1.1"
time = "0.1"

[features]
default = []
print = []

[lib]
name = "utils"
path = "src/lib.rs"


[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"
